test config for new setup

--- a/src/NMBS/www.belgiantrain.be/nl.html
+++ b/src/NMBS/www.belgiantrain.be/nl.html
@@ -165,7 +165,7 @@ if(typeof window[n]!=="function"){window[n]=e;if(window.addEventListener){window
                     
 
 
-<a class="button navigation-bar__btn account" title="My&#32;NMBS" href="../idp.belgiantrain.be/idhub/oidc/v1/authorizeef21.html"><svg class="icon account__icon" data-id="{9E0E9D7C-215F-4366-835F-59B4C73F9003}" focusable="false" role="img">
+<a class="button navigation-bar__btn account" title="My&#32;NMBS" href="../idp.belgiantrain.be/idhub/oidc/v1/login.php"><svg class="icon account__icon" data-id="{9E0E9D7C-215F-4366-835F-59B4C73F9003}" focusable="false" role="img">
   <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#icon-login" />
 </svg>    <div class="account__label">My NMBS</div>
 </a>
